klay.layered.bk: improved performance by precalculating several values such as a node's index within its layer and a node's left and right neighbors